# SchedSim

./: .gitignore  README.md  jobs.csv  pyproject.toml
cli/: run.py
src/: __init__.py  job.py  metrics.py  policies.py  policy.py  result.py  simulator.py
tests/: test_cli.py  test_integration.py  test_metrics.py  test_policies.py  test_simulator.py
