[project]
name = "schedsim"
version = "0.1.0"
description = "A lightweight Python library for simulating and evaluating job scheduling policies."
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
schedsim = "cli.run:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["src*", "cli*"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
